@@ -1,3 +1,7 @@
+2001-03-16  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* Core.pm (orac_print_configuration): Fix $$log_options
+
 2001-02-01  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* Frame/CGS4.pm (inout): Use _split_fname and _join_fname
